@@ -600,6 +600,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.calcite</groupId>
+			<artifactId>calcite-elasticsearch</artifactId>
+			<version>${calcite.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
